rough draft of ch 1 completed, minus refs. requires significant edits

--- a/chap1.tex
+++ b/chap1.tex
@@ -961,12 +961,62 @@ general-purpose AI. Though certain ventures still hold out the dream
 of doing so, several AI winters have shown that the creation of
 general intelligence is very difficult, and is by no means around the
 corner. Those working in the field are well aware of
-this.\cite{???-articlerebuttingmusk} 
+this.\cite{???-articlerebuttingmusk} So much current work is
+fundamentally utilitarian, building systems with clear goals, metrics
+for success, and market segments.
 
 The utilitarian model of AI makes good sense for a number of reasons.
-First, achievable, makes money
-Second, humanlike characteristics may not be helpful
-But, assumes deep understanding is unnecessary: quote from USC talk
+First, much can be achieved with current technologies. Rather than
+focusing on a long-term project, which would carry much greater risks
+and rewards which are further off, achieving short term goals is an
+attractive prospect. It can not only attract money but can be
+profitable sooner. Though short term commercial viability is not
+necessarily applicable for this vision of the self-driving vehicle, it
+is possible to have working prototypes on the road, generating
+interest and publicity even in controlled conditions. Taking
+journalists for test drives drums up interest, even if the technology
+is not ready for full-scale deployment. Make no mistake: the current
+vehicles are capable of recognizing pedestrians, but any claim that
+they ``know'' or ``understand'' is a tenuous misuse of words which
+could no longer credibly mean what they generally do. 
+
+Second, humanlike characteristics may not be helpful for building
+specific applications. One would likely not want one's self-driving car
+to be preoccupied or emotional.\cite{???-wiredFutureofAI} It may be that, for utilitarian
+purposes like driving, many of the characteristics of the human are
+detrimental, their elimination helpful and intentional. Much of the
+discussion around why autonomous vehicles are necessary centers on
+just such qualities: distractability, sleepiness, lapses in
+concentration.\cite{???} We would not wish to emulate such
+characteristics in robotic systems. However, these are human
+capabilities, but also only caricatures of the human. People possess a
+variety of other capabilities which might be helpful to certain AI
+systems. As AI researcher Doug Lenat wrote in 1997:\blockquote{Before
+  we let robotic chauffeurs drive around our streets, I'd want the
+  automated driver to have a general common sense about the value of a
+cat versus a child versus a car bumper, about children chasing balls
+into the streets, about young dogs being more likely to dart in front
+of cars than old dogs (which, in turn, are more likely to bolt than
+elm trees are), about death being a very undesirable thing.\cite[p.
+  122]{ekbia}} 
+
+Current approaches, however, assume this kind of deep understanding is
+unnecessary, both for the technical creation of such vehicles as well
+as their public acceptance. It is an interesting read on the changing
+times to notice that Lenat's statement seems to suggest humanoid
+robotic drivers operating regular cars. As well as moving toward
+functionalist systems, the industry has moved toward embedded systems
+within devices, systems that make no pretenses to be humanoid, but
+instead revel in appliance-hood. Whether this shift in the form of AI
+systems makes customers more or less nervous about computer-driven
+vehicles is an empirical question\footnote{CAN I FIND RESEARCH ON
+  THIS}. But it certainly suggests a desire to make the systems more
+invisible---and actually has important implications for human-computer
+interaction, as we will see in the next section. Though it may seem
+obvious, it is vital to remember that the devices we discuss here may
+have the properties Lenat mentions only in the way that Mario is
+``self-aware,'' possessing programmed constraints that cause it to
+avoid people, and perhaps expect children to behave erratically. 
 
 
 %% 2.3) what standard of safety? 
@@ -982,7 +1032,78 @@ But, assumes deep understanding is unnecessary: quote from USC talk
 %% statistical safety vs. passenger's feelings of safety (3 p)
 %% ---drawing from PARC/CAST documents
 \subsection{Safety and Statistical Risk}
-What drives this is safety
+
+But regardless of understanding, what drives the self-driving car
+narrative is safety; specifically, the poor safety record of human
+drivers and the potential for machines to do much better, free from
+human frailties of distraction and fatigue. How bad are human
+drivers, really? Conventional stories of human drivers paint us as
+plainly terrible, prone to road rage and drowsyness and generally
+doing anything except paying attention\footnote{Numerous popular
+  articles take this position\cite{???}}. However, the statistics tell
+a slightly different story. Official numbers show that the number of
+motor vehicle accidents has remained in the range of 10--11 million
+per year for most of the late 2000s. The death rate seems to have
+decreased overall in this time, settling somewhere below 1.5 deaths
+per 100 million vehicle miles, presumably due to a combination of
+better safety features (especially since 1990) and other
+factors.\cite{???} The total number of vehicle-related deaths is much
+lower, at a still significant 35,000 deaths per year. But this alone
+does not tell the story. At around 1.5 deaths per 100 million vehicle
+miles, or about 1 death per 67 million miles, humans seem relatively
+competent in a statistical sense. The average American, who might
+drive 1 million miles\cite{???} is unlikely to be
+involved in a fatal crash in his or her lifetime. Looking at non-fatal
+accidents as well, humans get involved in about one accident per
+286,000 vehicle miles. Part of why the autonomous vehicle problem is
+such a difficult one is that these numbers are relatively high.
+
+Theoretically, computers can do better. But especially careful human
+drivers can also clearly beat the human average. But how safe do
+autonomous vehicles need to be in order to be allowed on our roads?
+Safer than the average human? or safer than the very best drivers?
+Such questions have real impact when it comes to how devices are
+designed and when they become commercially viable. The autonomous
+vehicle enterprise seems to call for using such projected statistics
+to define policy. One common narrative is that undue caution in the
+rollout of autonomous vehicles will directly ``cost'' lives, since
+people are killed by human drivers every day.\cite{???-blog} However,
+people are also accustomed to the current automobile death rate, and
+any autonomous vehicle crashes are likely to attract deep
+scrutiny\footnote{As Jim Womack has pointed out, there is no good side
+to change as a regulator. Regulators are not congratulated when things
+go right, only criticized when things go wrong. So some measure of
+tentativeness is almost certainly justified to the regulatory mind.
+(Discussion with the author, December 3, 2014)} as
+to whether a human could have prevented the accident.\cite{???}
+
+These are questions of policy, but also questions of human acceptance.
+This ideology posits lowering accident rates above all else, leaving
+no space for human squeamishness about technology and responsibility. 
+The statistical argument suggests that the death rate is all that
+matters, but humans are notoriously bad at understanding and
+responding to statistics. Does it make us feel better---more
+comfortable, more likely to get into autonomous taxis and spend our
+money on autonomous cars---to know that they are statistically safer
+than the average driver? 
+
+Airlines seem to be a place where these different dimensions of
+safety---statistical safety and feelings of safety---already have
+become visible. Despite the comparative statistical safety of flying,
+people tend to be more afraid of flying than getting in their
+cars.\cite{???} Well this may have to do with a number of factors,
+including that aircraft do not remain on the ground during operation,
+it also represents a situation in which passengers give over their
+agency to pilots performing a job they do not understand and could not
+take over in an emergency.\cite{???-canIFindAnythingOnThis} SIMILAR
+ISSUES WITH TRAINS?\cite{??} The
+PARC/CAST working group had to account for these issues in their recent
+recommendations about airplane safety. They judged that if air traffic
+were to continue to increase with XXXX rates of crashes, by XXXX it
+would reach one fatal crash per day, which would be intolerable to
+airline customers.\cite{???-PARCCAST} So actual safety rates are only
+one component of interest when considering how consumers react to
+modes of transportation. Perceived safety may be very different.
 
 
 %% 3) (or worked in to each of the previous) current research
