removed bad chars

--- a/chap1.tex
+++ b/chap1.tex
@@ -595,7 +595,7 @@ the previous techniques\cite{???}.
 FIND AN NEURAL NETWORK PRIMER I CAN REFER TO\footnote{
 (perhaps Jordan, Michael I.; Bishop, Christopher M. (2004). ``Neural
 Networks''. In Allen B. Tucker. Computer Science Handbook, Second
-Edition (Section VII: Intelligent Systems). Boca Raton, FL: Chapman &
+Edition (Section VII: Intelligent Systems). Boca Raton, FL: Chapman \&
 Hall/CRC Press LLC)}
 
 Neural networks are essentially just a web of nodes with
@@ -991,14 +991,15 @@ concentration.\cite{???} We would not wish to emulate such
 characteristics in robotic systems. However, these are human
 capabilities, but also only caricatures of the human. People possess a
 variety of other capabilities which might be helpful to certain AI
-systems. As AI researcher Doug Lenat wrote in 1997:\blockquote{Before
-  we let robotic chauffeurs drive around our streets, I'd want the
+systems. As AI researcher Doug Lenat wrote in 1997:
+\begin{quote}
+Before we let robotic chauffeurs drive around our streets, I'd want the
   automated driver to have a general common sense about the value of a
 cat versus a child versus a car bumper, about children chasing balls
 into the streets, about young dogs being more likely to dart in front
 of cars than old dogs (which, in turn, are more likely to bolt than
 elm trees are), about death being a very undesirable thing.\cite[p.
-  122]{ekbia}} 
+  122]{ekbia}\end{quote} 
 
 Current approaches, however, assume this kind of deep understanding is
 unnecessary, both for the technical creation of such vehicles as well
