fixed bib issues

--- a/chap1.tex
+++ b/chap1.tex
@@ -233,8 +233,8 @@ displaced to the invisible labors of mapping, programming, and
 monitoring---engineers are designing systems where the ``driver''
 seems present largely to ensure the operation of capital-intensive
 machinery, burdened with new but perhaps even more menial tasks of
-machine tending.\footnote{See for example Tom Simonite, “Lazy Humans
-Shaped Google's New Autonomous Car,”\cite{simonite}  which discusses
+machine tending.\footnote{See for example Tom Simonite, ``Lazy Humans
+Shaped Google's New Autonomous Car,''\cite{simonite}  which discusses
 the human role within Google's test vehicle,
 and the company's response. This is purely speculation, but due to
 the way the system operated previously, it is possible at least one Google
