--- a/cover.tex
+++ b/cover.tex
@@ -72,7 +72,7 @@
 %% the thesis to yourself, just specify the `vi' documentclass option.  If for
 %% some reason you want to exactly specify the copyright notice text, you can
 %% use the \copyrightnoticetext command.  
-\copyrightnoticetext{\copyright Erik Stayton, 2015.}
+\copyrightnoticetext{\copyright Erik Stayton, 2015. All rights reserved.}
 
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
