--- a/main.bib
+++ b/main.bib
@@ -236,66 +236,6 @@
    month = "August 31",
 }
 
-@BOOK{grimsonpatil,
-   editor = "W. Eric L. Grimson and Ramesh S. Patil",
-   booktitle = "{AI} in the 1980s and {B]eyond",
-   title = "{AI} in the 1980s and {B]eyond",
-   publisher = "MIT Press",
-   address = "Cambridge, MA",
-   year = 1987,
-}
-
-@INCOLLECTION{winston,
-   crossref = "grimsonpatil",
-   author = "Patrick H. Winston",
-   title = "{A}rtificial {I}ntelligence: {A} {P}erspective",
-   pages = "1--10",
-}
-
-@INCOLLECTION{mobilebrooks,
-   crossref = "grimsonpatil",
-   author = "Rodney A. Brooks",
-   title = "{A}utonomous {M}obile {R}obots",
-   pages = "343--362",
-}
-
-@BOOK{philosophyBoden,
-   editor = "Margaret A. Boden",
-   booktitle = "{T}he {P}hilosophy of {A}rtificial {I]ntelligence",
-   title = "{T}he {P}hilosophy of {A}rtificial {I]ntelligence",
-   publisher = "Oxford University Press",
-   address = "Oxford, UK",
-   year = 1990,
-}
-
-@INCOLLECTION{newellsimon,
-   crossref = "philosophyBoden",
-   author = "Allen Newell and Herbert A. Simon",
-   title = "{C}omputer {S}cience as {E}mpirical {E}nquiry: {S}ymbols and {S}earch",
-   pages = "105--132",
-}
-
-@INCOLLECTION{escapingBoden,
-   crossref = "philosophyBoden",
-   author = "Margaret A. Boden",
-   title = "{E}scaping from the {C}hinese {R}oom",
-   pages = "89--104",
-}
-
-@INCOLLECTION{chineseSearle,
-   crossref = "philosophyBoden",
-   author = "John R. Searle",
-   title = "{M}inds, {B}rains, and {P}rograms",
-   pages = "67--88",
-}
-
-@INCOLLECTION{dennett,
-   crossref = "philosophyBoden",
-   author = "Daniel C. Dennett",
-   title = "{C}ognitive {W}heels: {T}he {F}rame {P}roblem of {AI}",
-   pages = "147--170",
-}
-
 @BOOK{pollock,
    author = "John L. Pollock",
    title = "{H}ow to {B}uild a {P}erson: {A} {P}rolegomenon",
@@ -379,11 +319,11 @@
 
 @ARTICLE{wetmore,
    author = "Jameson Wetmore",
-   title = "{D}riving the {D}ream: {T}he {H}istory and {M}otivations {B}ehind 60 {Y}ears of {A}utomated {H}ighway {S}ystems,
+   title = "{D}riving the {D}ream: {T}he {H}istory and {M}otivations {B}ehind 60 {Y}ears of {A}utomated {H}ighway {S}ystems",
    journal = "Automotive History Review",
    year = 2003,
    month = "Summer",
-   note = "Via PDF from Consortium for Science, Policy, & Outcomes at ASU",
+   note = "Via PDF from Consortium for Science, Policy, \& Outcomes at ASU",
 }
 
 @ARTICLE{uberJardin,
@@ -402,6 +342,83 @@
    month = "October",
    year = 2011,
 }
+
+@INCOLLECTION{winston,
+   crossref = "grimsonpatil",
+   author = "Patrick H. Winston",
+   title = "{A}rtificial {I}ntelligence: {A} {P}erspective",
+   pages = "1--10",
+}
+
+@INCOLLECTION{mobilebrooks,
+   crossref = "grimsonpatil",
+   author = "Rodney A. Brooks",
+   title = "{A}utonomous {M}obile {R}obots",
+   pages = "343--362",
+}
+
+@BOOK{grimsonpatil,
+   editor = "W. Eric L. Grimson and Ramesh S. Patil",
+   booktitle = "{AI} in the 1980s and {B}eyond",
+   title = "{AI} in the 1980s and {B}eyond",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = 1987,
+}
+
+@INCOLLECTION{newellsimon,
+   crossref = "philosophyBoden",
+   author = "Allen Newell and Herbert A. Simon",
+   title = "{C}omputer {S}cience as {E}mpirical {E}nquiry: {S}ymbols and {S}earch",
+   pages = "105--132",
+}
+
+@INCOLLECTION{escapingBoden,
+   crossref = "philosophyBoden",
+   author = "Margaret A. Boden",
+   title = "{E}scaping from the {C}hinese {R}oom",
+   pages = "89--104",
+}
+
+@INCOLLECTION{chineseSearle,
+   crossref = "philosophyBoden",
+   author = "John R. Searle",
+   title = "{M}inds, {B}rains, and {P}rograms",
+   pages = "67--88",
+}
+
+@INCOLLECTION{dennett,
+   crossref = "philosophyBoden",
+   author = "Daniel C. Dennett",
+   title = "{C}ognitive {W}heels: {T}he {F}rame {P}roblem of {AI}",
+   pages = "147--170",
+}
+
+@BOOK{philosophyBoden,
+   editor = "Margaret A. Boden",
+   booktitle = "{T}he {P}hilosophy of {A}rtificial {I}ntelligence",
+   title = "{T}he {P}hilosophy of {A}rtificial {I}ntelligence",
+   publisher = "Oxford University Press",
+   address = "Oxford, UK",
+   year = 1990,
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -764,5 +781,5 @@ information).
 
 @MISC{random-note-crossref,
    key = {Volume-2},
-   note = "Volume~2 is listed under Knuth \cite{book-full}"
+   note = "Volume~2 is listed under Knuth \cite{book-full}",
 }
